--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "dependencies": {
     "@material-ui/core": "^4.10.2",
     "@material-ui/icons": "^4.11.2",
+    "@react-pdf/renderer": "^2.1.1",
     "@reactour/tour": "^2.8.2",
     "body-scroll-lock": "^4.0.0-beta.0",
     "bootstrap": "^5.1.3",
